WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email__mdt/MC_Triggered_Email__mdt.object-meta.xml
<CustomObject>
    <description>Case teams need a way to call triggered emails in MC. VF page MarketingTriggeredEmail is used via a button on case. This metadata purpose to to hold the mapping of fields and MC triggered email keys</description>
    <label>MC Triggered Email</label>
    <pluralLabel>MC Triggered Emails</pluralLabel>
</CustomObject>