WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email__mdt/fields/Default_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Email__c</fullName>
    <inlineHelpText>Default value used for the recipients email address</inlineHelpText>
    <label>Default Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>