WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email__mdt/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>