WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email__mdt/fields/Subscriber_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Key__c</fullName>
    <inlineHelpText>Field used as the SubscriberKey</inlineHelpText>
    <label>Subscriber Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>